--- a/index.html
+++ b/index.html
@@ -2,7 +2,43 @@
 <html lang="en"> 
     <head> <title>Bootstrap Example</title>
         <meta charset="utf-8"> <link rel="stylesheet" type="text/css" href="style.css"> <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css"> <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> </head> 
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script> </head>
+    <style>
+        body{
+        text-align: center;
+        }
+        #HomePage{
+        background-color: cornflowerblue;
+        }
+        #Logo{
+        width: 1000px;
+            margin-bottom: 50px;
+        }
+        h1{
+            font-size: 35px;
+            color: chocolate
+        }
+        #GridGallery{
+            background-color: firebrick;
+        }
+        .GGphotos{
+            width:370px;
+            height: 300px;
+        }
+        #SlidingGallery{
+            background-color: blue
+        }
+        .SGphotos{
+            width: 500px;
+            height: 500px;
+            border-style: solid;
+            border-width: thick;
+        }
+        p{
+            font-size: 35px;
+            color: chocolate,
+        }
+    </style>
     <body> 
         <div class="container"> 
             <section id="app"> 
